--- a/basic.css
+++ b/basic.css
@@ -38,159 +38,138 @@ header{
     margin-left: 20%;
     overflow: hidden;
 }
+
 header h1{
-    font-size:120%;
-    color:#313131;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    font-family: 'Alex Brush', cursive;
+    font-size: 700%;
+    text-align: center;
+    letter-spacing: 5px;
+    color: #000000;
+    background-color: #ffffff;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-top: 20px;
     margin-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    border:1px solid #313131;
-    border-radius: 5px;
-    letter-spacing: 3px;
-    font-weight:400;
-    float: left;
+    border: 3px solid #000000;
+    border-radius: 15px;
 }
+
 header p{
     font-size:100%;
     color:#313131;
     float: left;
 }
 
-/*****BRANDING*****/
-#branding{
+/*****div*****/
+.div-left-b{
     display: block;
-    width: 60%;
-    margin-left: 20%;
+    float:left;
     overflow: hidden;
-    background-color: #313131;
+    width: 30%;
+    height: 300px;
+    background-color: #000000;
+    margin-left: 20%;
     margin-bottom: 20px;
-    letter-spacing: 10px;
-    line-height: 300px;
-}
-#branding p{
-    color: #fff;
-    font-size: 120%;
-    padding-left: 3%;
-}
-
-/*****NAV*****/
-nav{
-    width: 100%;
-    border-top: 1px solid orange;
-    border-bottom: 1px solid orange;
-    margin-bottom: 5px;
-    overflow: hidden;
-}
-nav ul{
-    width: 60%;
-    margin-left: 20%;
-}
-nav li{
-    width: calc(25% - 2px);
-    font-size: 110%;
-    letter-spacing: 5px;
-    font-weight: 400;
-    line-height: 45px;
-    border-left: 1px solid orange;
-    color: #313131;
-    cursor: pointer;
-    text-align: center;
-    float: left;
-}
-nav li:last-child{
-    border-right: 1px solid orange;
-}
-
-nav li:hover{
-    background-color: orange;
-    transition: background-color 0.5s ease-out;
-    color: #fff;
-}
-
-/*****ARTICLE*****/
-section{
-    display: block;
-    width: 60%;
-    margin: 20px auto;
-    overflow: hidden;
-}
-article{
-    width: calc(50% - 15px);
-    padding: 2.5%;
-    margin-bottom: 30px;
-    background-color: #f9f9f9;
-    overflow: hidden;
-    float: left;
-}
-article:nth-child(2n){
-    margin-left: 30px;
-}
-article .date{
-    font-size: 60%;
-    color: orange;
-    border: 1px solid orange;
-    padding-top:3px;
-    padding-bottom: 3px;
-    padding-right: 6px;
-    padding-left: 6px;
-    letter-spacing: 5px;
-    float: left;
-}
-article h1{
-    width: 100%;
-    font-size: 150%;
-    color: #313131;
-    letter-spacing: 3px;
-    padding-bottom:2px;
-    padding-top: 10px;
-    border-bottom: 1px solid #bababa;
-    margin-bottom: 15px;
-    float: left;
-}
-article p{
-    font-size: 100%;
-    color: #313131;
-    letter-spacing: 3px;
-    line-height: 200%;
-    margin-bottom: 10px;
-    float: left;
-}
-article .btn{
-    color: #fff;
-    border: 1px solid orange;
-    background-color: orange;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
+    border: 5px solid #5e5959;
     border-radius: 5px;
-    letter-spacing: 5px;
-    text-decoration: none;
-    overflow: hidden;
-    float: right;
-}
-article .btn:hover{
-    background-color: #fff;
-    border: 1px solid orange;
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    transition: all 0.5s;
-    color: orange;
-    overflow: hidden;
 }
 
-footer{
-    font-size: 80%;
-    width: 100%;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #313131;
-}
-footer address{
+.div-left-b p{
+    font-family: 'Alex Brush', cursive;
     color: #fff;
-    letter-spacing: 5px;
+    /*letter-spacing: 5px;*/
+    text-align: center;
+    line-height: 180px;
+    font-size: 600%;
 }
+
+.div-right-w{
+    display: block;
+    width: 30%;
+    height: 300px;
+    overflow: hidden;
+    background-color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.div-right-w p{
+    font-family: 'Alex Brush', cursive;
+    color: #000000;
+    /*letter-spacing: 5px;*/
+    margin-top: 60px;
+    margin-left: 60px;
+    font-size: 200%;
+}
+
+.div-left-w{
+    display: block;
+    float: left;
+    width: 30%;
+    height: 300px;
+    overflow: hidden;
+    background-color: #ffffff;
+    margin-left: 20%;
+    margin-bottom: 20px;
+}
+
+.div-left-w p{
+    font-family: 'Alex Brush', cursive;
+    color: #000000;
+    /*letter-spacing: 5px;*/
+    margin-top: 60px;
+    margin-left: 60px;
+    font-size: 200%;
+}
+
+.div-right-b{
+    display: block;
+    overflow: hidden;
+    width: 30%;
+    height: 300px;
+    background-color: #000000;
+    margin-bottom: 20px;
+    border: 5px solid #5e5959;
+    border-radius: 5px;
+}
+
+.div-right-b p{
+    font-family: 'Alex Brush', cursive;
+    color: #fff;
+    /*letter-spacing: 5px;*/
+    text-align: center;
+    line-height: 180px;
+    font-size: 600%;
+}
+
+.icons{
+    overflow: hidden;
+    text-align: center;
+}
+
+
+
+#svg-animation{
+    background-color: #ffffff;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    margin: auto;
+    width: 80%;
+    height: 800px;
+}
+
+#svg-animation .st0{
+    fill:none;
+    stroke: #ffffff;;
+    stroke-width:20;
+    stroke-linecap:round;
+    stroke-linejoin:round;
+    stroke-miterlimit:10;
+    stroke-dasharray: 1500;
+    stroke-dashoffset:1500;
+}
+
