--- a/basic.css
+++ b/basic.css
@@ -56,8 +56,8 @@ header h1{
     margin-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    border: 3px solid #000000;
-    border-radius: 15px;
+    /*border: 3px solid #000000;*/
+    border-radius: 2px;
 }
 
 header p{
@@ -76,8 +76,8 @@ header p{
     background-color: rgba(0, 0, 0, 0.7);
     margin-left: 20%;
     margin-bottom: 20px;
-    border: 5px solid #5e5959;
-    border-radius: 5px;
+    border: 2px solid #5e5959;
+    border-radius: 2px;
 }
 
 .div-left-b p{
@@ -93,11 +93,13 @@ header p{
     font-family: "Hiragino Kaku Gothic Std";
     font-weight: bolder;
     display: block;
+    overflow: hidden;
     width: 30%;
     height: 300px;
-    overflow: hidden;
     background-color:rgba(255, 255, 255, 0.7);
     margin-bottom: 20px;
+    border: 2px solid #5e5959;
+    border-radius: 2px;
 }
 
 .div-right-w p{
@@ -176,4 +178,6 @@ header p{
     stroke-dasharray: 1500;
     stroke-dashoffset:1500;
 }
+
+
 
