--- a/basic.css
+++ b/basic.css
@@ -155,25 +155,20 @@ header p{
     stroke-dashoffset:1500;
 }
 
-.fixed {
+.bg {
     position: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
 }
-  
-  
-.fixed.bg1 {
-    height: 100vh;
-}
 
-.fixed.bg1 .flake1 {
+.bg .snow1 {
     opacity: 0;
     -webkit-transform-origin: 0px 0px;
     transform-origin: 0px 0px;
-    -webkit-animation-name: Drop;
-    animation-name: Drop;
+    -webkit-animation-name: Snow;
+    animation-name: Snow;
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
@@ -195,36 +190,26 @@ header p{
     z-index: -100;
   }
 
-  @keyframes Drop {
+  @keyframes Snow {
     0% {
-      /*-webkit-transform: translateY(-200px);*/
       transform: translateY(-200px);
-      opacity: 1;
+      opacity: 1.0;
     }
   
-    75% {
-      /*-webkit-transform: translateY(100vh);*/
-      transform: translateY(100vh) translateX(200px);
+    100% {
+      transform: translateY(80vh) translateX(200px);
       opacity: 0.0;
     }
   }
 
-  @-webkit-keyframes Drop {
+  @-webkit-keyframes Snow {
     0% {
-      /*-webkit-transform: translateY(-200px);*/
-      /*transform: translateY(-200px);*/
-      opacity: 0.5;
+      -webkit-transform: translateY(-200px);
+      opacity: 1.0;
     }
   
-    35% {
-      /*-webkit-transform: translateY(50vh);*/
-      /*transform: translateY(50vh);*/
-      opacity: 1;
-    }
-  
-    70% {
-      /*-webkit-transform: translateY(100vh);
-      transform: translateY(100vh);*/
+    100% {
+      -webkit-transform: translateY(80vh) translateX(200px);
       opacity: 0.5;
     }
   }
