--- a/basic.css
+++ b/basic.css
@@ -25,35 +25,31 @@ body {
 }
 
 .c-button {
-    position: relative;
     display: inline-block;
     text-decoration: none;
     -webkit-appearance: none;
     appearance: none;
-    border: none;
     background-color: transparent;
     cursor: pointer;
 }
 
 .p-hamburger {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: fixed;
+    top: 20px;
+    left: 20px;
     width: 48px;
     height: 48px;
     margin: auto;
     border-radius: 50%;
-    border: 1px solid #f9d8ae;
-    box-shadow: 0 0 2rem transparent;
+    border: 2px solid #313131;
     outline: none;
     -webkit-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
+    z-index: 10;
 }
 
-.p-hamburger:hover, .p-hamburger:focus {
-    box-shadow: 0 0 .5rem rgba(255, 255, 255, .5);
+.p-hamburger:hover{
+    box-shadow: 0 0 0.5rem rgba(255, 255, 255, .5);
 }
 
 .p-hamburger__line {
@@ -68,7 +64,7 @@ body {
     /* お肉の幅 */
     height: 2px;
     /* お肉の高さ */
-    background-color: #f9d8ae;
+    background-color: #313131;
     -webkit-transition: inherit;
     transition: inherit;
 }
@@ -98,7 +94,7 @@ body {
 
 .p-hamburger[aria-expanded="true"] .p-hamburger__line::before, .p-hamburger[aria-expanded="true"] .p-hamburger__line::after {
     top: 0;
-    background-color: #f9d8ae;
+    background-color: #313131;
 }
 
 .p-hamburger[aria-expanded="true"] .p-hamburger__line::before {
@@ -110,10 +106,10 @@ body {
 .p-hamburger[aria-expanded="true"] .p-hamburger__line::after {
     -webkit-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+    transform: rotate(-45deg);  
 }
 
-.p-drawer {
+.drawer-out {
     position: fixed;
     left: 0;
     right: 0;
@@ -121,13 +117,13 @@ body {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
-    transform: translateX(100%);
+    background-color: rgba(0, 0, 0, .6);
+    transform: translateX(-100%);
     -webkit-transition: transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
 }
 
-.is-drawerActive .p-drawer {
+.is-drawerActive .drawer-out {
     transform: translateX(0);
 }
 
