--- a/basic.css
+++ b/basic.css
@@ -117,14 +117,35 @@ body {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgb(0, 0, 5);
     transform: translateX(-100%);
     -webkit-transition: transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
 }
 
+/*.drawer-in {
+    position: fixed;
+    left: 10%;
+    right: 10%;
+    top: 10%;
+    bottom: 10%;
+    width: 80%;
+    height: 80%;
+    background-color:  rgba(255, 255, 255, .4);
+    transform: translateX(-100%);
+}*/
+
 .is-drawerActive .drawer-out {
     transform: translateX(0);
+}
+
+.links {
+    position: fixed;
+    right: 20%;
+    left: 20%;
+    top: 40%;
+    bottom: 40%;
+    background-color: azure;
 }
 
 /*****HEADER*****/
