--- a/basic.css
+++ b/basic.css
@@ -148,6 +148,13 @@ body {
     background-color: azure;
 }
 
+.link1 {
+    position: relative;
+    color: white;
+    font-size: 40px;
+    font-weight: 100;
+}
+
 /*****HEADER*****/
 
 header {
