--- a/basic.css
+++ b/basic.css
@@ -40,7 +40,7 @@ body {
     width: 48px;
     height: 48px;
     margin: auto;
-    border-radius: 50%;
+    border-radius: 100%;
     border: 2px solid #313131;
     outline: none;
     -webkit-transition: all .3s ease-in-out;
@@ -59,11 +59,8 @@ body {
     bottom: 0;
     left: 0;
     margin: auto;
-    /* 親要素に対してど真ん中に配置 */
     width: 18px;
-    /* お肉の幅 */
     height: 2px;
-    /* お肉の高さ */
     background-color: #313131;
     -webkit-transition: inherit;
     transition: inherit;
@@ -88,13 +85,17 @@ body {
     top: 5px;
 }
 
+.p-hamburger[aria-expanded="true"] {
+    border: 2px solid white;
+}
+
 .p-hamburger[aria-expanded="true"] .p-hamburger__line {
     background-color: transparent;
 }
 
 .p-hamburger[aria-expanded="true"] .p-hamburger__line::before, .p-hamburger[aria-expanded="true"] .p-hamburger__line::after {
     top: 0;
-    background-color: #313131;
+    background-color: white;
 }
 
 .p-hamburger[aria-expanded="true"] .p-hamburger__line::before {
@@ -117,23 +118,11 @@ body {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 5);
+    background-color: rgb(20, 20, 20);
     transform: translateX(-100%);
     -webkit-transition: transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
 }
-
-/*.drawer-in {
-    position: fixed;
-    left: 10%;
-    right: 10%;
-    top: 10%;
-    bottom: 10%;
-    width: 80%;
-    height: 80%;
-    background-color:  rgba(255, 255, 255, .4);
-    transform: translateX(-100%);
-}*/
 
 .is-drawerActive .drawer-out {
     transform: translateX(0);
@@ -143,16 +132,19 @@ body {
     position: fixed;
     right: 20%;
     left: 20%;
-    top: 40%;
-    bottom: 40%;
-    background-color: azure;
+    top: 25%;
+    bottom: 25%;
 }
 
-.link1 {
+.link {
+    display: block;
     position: relative;
-    color: white;
+    font-family: 'Anton', sans-serif;
     font-size: 40px;
     font-weight: 100;
+    text-align: center;
+    margin-bottom: 50px;
+    color: white;
 }
 
 /*****HEADER*****/
