--- a/basic.css
+++ b/basic.css
@@ -567,3 +567,12 @@ header p {
         opacity: 0.5;
     }
 }
+
+footer {
+    height: 30px;
+    width: 100%;
+    background-color: rgb(20, 20, 20);
+    color: white;
+    text-align: center;
+    z-index: 0;
+}
