--- a/index.css
+++ b/index.css
@@ -2,9 +2,7 @@
 /* CSS Document */
 
 body {
-    font: "Hiragino Kaku Gothic Pro", Osaka, "メイリオ", "ＭＳ Ｐゴシック", "MS PGothic", Verdana, Arial, sans-serif;
     margin: 0;
-    color: #313131;
     background-image: url("image/IMG_2107.JPG");
     background-size: cover;
     background-attachment: fixed;
@@ -41,7 +39,7 @@ body {
     height: 48px;
     margin: auto;
     border-radius: 100%;
-    border: 2px solid #313131;
+    border: 2px solid rgb(20, 20, 20);
     outline: none;
     -webkit-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
@@ -49,7 +47,7 @@ body {
 }
 
 .p-hamburger:hover{
-    box-shadow: 0 0 0.5rem rgba(255, 255, 255, .5);
+    box-shadow: 0 0 20px rgba(255, 255, 255, .5);
 }
 
 .p-hamburger__line {
@@ -61,7 +59,7 @@ body {
     margin: auto;
     width: 18px;
     height: 2px;
-    background-color: #313131;
+    background-color: rgb(20, 20, 20);
     -webkit-transition: inherit;
     transition: inherit;
 }
@@ -569,10 +567,19 @@ header p {
 }
 
 footer {
-    height: 30px;
+    position: fixed;
+    height: 40px;
     width: 100%;
+    bottom: 0;
     background-color: rgb(20, 20, 20);
     color: white;
     text-align: center;
-    z-index: 0;
+    z-index: -1;
+}
+
+footer p{
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
