--- a/contact.css
+++ b/contact.css
@@ -40,7 +40,7 @@ body {
     outline: none;
     -webkit-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
-    z-index: 1;
+    z-index: 2;
 }
 
 .p-hamburger:hover{
@@ -117,6 +117,7 @@ body {
     transform: translateX(-100%);
     -webkit-transition: transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
+    z-index: 1;
 }
 
 .is-drawerActive .drawer-out {
@@ -167,6 +168,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
+    z-index: 100;
 }
 
 .bg .snow1 {
@@ -415,15 +417,69 @@ body {
     }
 }
 
-.main-block {
-    display: block;
+#main {
     position: relative;
     background-color: rgba(255, 255, 255, .5);
-    top: 15%;
+    top: 20%;
     left: 30%;
-    height: 70vh;
+    height: 60vh;
     width: 40vw;
-    z-index: -1;
+}
+
+.img-block{
+    display: block;
+    top: 10%;
+    left: 0;
+    height: 50%;
+    width: 100%;
+    text-align: center;
+}
+
+.img-icon{
+    pointer-events: none;
+    position: relative;
+    top: 40px;
+    border-radius: 50%;
+    width:  150px;
+    height: 150px;
+    border: 9px solid rgba(255, 255, 255, .5);
+}
+
+.img-block p{
+    position: relative;
+    top: 25px;
+    font-family: "M PLUS Rounded 1c";
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.EA-block{
+    display: block;
+    top: 10%;
+    height: 20%;
+    width: 100%;
+    text-align: center;
+}
+
+.EA-block p{
+    margin-block-start: 0em;
+    margin-block-end: 0.5em;
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.EA-block .under{
+    background: linear-gradient(transparent 50%, rgba(255, 255, 255, 0.5) 50%);
+}
+
+.icons-block{
+    display: block;
+    top: 10%;
+    height: 30%;
+    width: 100%;
+    text-align: center;
 }
 
 /* フッター部分 */
@@ -435,7 +491,6 @@ footer {
     background-color: rgb(20, 20, 20);
     color: white;
     text-align: center;
-    z-index: -1;
 }
 
 footer p{
