--- a/contact.css
+++ b/contact.css
@@ -421,9 +421,9 @@ body {
     position: relative;
     background-color: rgba(255, 255, 255, .5);
     top: 20%;
-    left: 30%;
+    margin: auto;
     height: 60vh;
-    width: 40vw;
+    width: 450px;
 }
 
 .img-block{
