--- a/practice.css
+++ b/practice.css
@@ -40,7 +40,7 @@ body {
     outline: none;
     -webkit-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
-    z-index: 1;
+    z-index: 2;
 }
 
 .p-hamburger:hover{
@@ -117,6 +117,7 @@ body {
     transform: translateX(-100%);
     -webkit-transition: transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
+    z-index: 1;
 }
 
 .is-drawerActive .drawer-out {
@@ -162,6 +163,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
+    z-index: 100;
 }
 
 .bg .snow1 {
@@ -410,6 +412,28 @@ body {
     }
 }
 
+/* main部分 */
+
+.wrapper{
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
+.con1{
+    position: relative;
+    top: 10%;
+    left: 10%;
+    height: 20vh;
+    width: 80vw;
+}
+
+.con1 p{
+    font-size: 20px;
+    font-weight: 600;
+    background-color: rgba(255, 255, 255, .5);
+}
+
 /* フッター部分 */
 
 footer {
@@ -420,7 +444,6 @@ footer {
     background-color: rgb(20, 20, 20);
     color: white;
     text-align: center;
-    z-index: -1;
 }
 
 footer p{
