--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ body {
     outline: none;
     -webkit-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
-    z-index: 10;
+    z-index: 2;
 }
 
 .p-hamburger:hover{
@@ -120,6 +120,7 @@ body {
     transform: translateX(-100%);
     -webkit-transition: transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
+    z-index: 1;
 }
 
 .is-drawerActive .drawer-out {
@@ -157,39 +158,56 @@ body {
     border-radius: 50%;
 }
 
-/*****HEADER*****/
+.wrapper{
+    height: 100%;
+    width: 100%;
+}
 
-header {
+.prof-wrap{
+    position: relative;
+    top: 50px;
+    left: 60%;
+    height: 400px;
+    width: 600px;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.prof-name{
+    position: relative;
     display: block;
-    width: 60%;
-    margin-left: 20%;
-    overflow: hidden;
-}
-
-header h1 {
-    font-family: 'Araial Black', cursive;
-    font-size: 500%;
+    top: 10px;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
-    letter-spacing: 5px;
-    color: #000000;
-    background-color: rgba(255, 255, 255, 0.3);
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    /*border: 3px solid #000000;*/
-    border-radius: 2px;
+    font-weight: 800;
+    font-size: 40px;
 }
 
-header p {
-    font-size: 100%;
-    color: #313131;
-    float: left;
+.prof-hob{
+    position: relative;
+    display: block;
+    left: 10%;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
 }
 
-/*****div*****/
+.prof-his{
+    position: relative;
+    display: block;
+    left: 10%;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+}
+
+.prof-amb{
+    position: relative;
+    display: block;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+}
 
 .div-left-b {
     display: block;
@@ -309,6 +327,7 @@ header p {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
+    z-index: 100;
 }
 
 .bg .snow1 {
@@ -574,7 +593,6 @@ footer {
     background-color: rgb(20, 20, 20);
     color: white;
     text-align: center;
-    z-index: -1;
 }
 
 footer p{
