--- a/index.css
+++ b/index.css
@@ -158,8 +158,16 @@ body {
     border-radius: 50%;
 }
 
+/* header部分 */
+header {
+    background-color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    width: 100vw;
+}
+
+/* main部分 */
 .wrapper{
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
 
@@ -261,6 +269,7 @@ body {
     stroke-dashoffset: 1500;
 }
 
+/* backgruond部分 */
 .bg {
     position: fixed;
     background-size: cover;
