--- a/practice.css
+++ b/practice.css
@@ -412,10 +412,17 @@ body {
     }
 }
 
+/* header部分 */
+header {
+    background-color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    width: 100vw;
+}
+
 /* main部分 */
 
 .wrapper{
-    height: 100%;
+    height: 80%;
     width: 100%;
     text-align: center;
 }
